Fix DCHECK when adding session-only cookie exception

Currently adding a session-only cookie exception hits a DCHECK in the
UMA logging code, where we only expect actions add/block/reset. This
patch adds handling for the session-only case and a corresponding
histogram table. Note the table is technically redundant as the values
can be calculated from (all - add - block - reset), but it seems nicer
to consistently log actions here.

TBR=raymes

Bug: 759544
Change-Id: I2361a540924cb6eef0c9817375468f6da2010d88
Reviewed-on: https://chromium-review.googlesource.com/657792
Commit-Queue: Timothy Loh <timloh@chromium.org>
Reviewed-by: Dave Schuyler <dschuyler@chromium.org>
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Reviewed-by: Patti <patricialor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501900}
Former-commit-id: 40189823856fc9d5372ea5dbd82b6b2cc5eeebea