chrome/browser/content_settings/web_site_settings_uma_util.cc
@@ -24,6 +24,11 @@ void WebSiteSettingsUmaUtil::LogPermissionChange(ContentSettingsType type,
   } else if (setting == ContentSetting::CONTENT_SETTING_DEFAULT) {
     UMA_HISTOGRAM_EXACT_LINEAR("WebsiteSettings.Menu.PermissionChanged.Reset",
                                histogram_value, num_values);
+  } else if (setting == ContentSetting::CONTENT_SETTING_SESSION_ONLY) {
+    DCHECK_EQ(CONTENT_SETTINGS_TYPE_COOKIES, type);
+    UMA_HISTOGRAM_EXACT_LINEAR(
+        "WebsiteSettings.Menu.PermissionChanged.SessionOnly", histogram_value,
+        num_values);
   } else {
     NOTREACHED() << "Requested to log permission change " << type << " to "
                  << setting;
